--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,6 +3,17 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
 
+
+
+// sizes
+
+$footer-height: 60px;
+
+$base-spacing: 10px;
+
+
+
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
@@ -24,8 +35,7 @@ body {
 
 /* Custom page header */
 .header {
-  border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
+  margin-bottom: $base-spacing;
 
   /* Make the masthead heading the same height as the navigation */
   h3 {
@@ -38,6 +48,12 @@ body {
 
 /* Custom page footer */
 .footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: $footer-height;
+  background-color: #f5f5f5;
+
   padding-top: 19px;
   color: #777;
   border-top: 1px solid #e5e5e5;
@@ -51,20 +67,6 @@ body {
 .jumbotron {
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
-
-  .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-  }
-}
-
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-
-  p + h4 {
-    margin-top: 28px;
-  }
 }
 
 /* Responsive: Portrait tablets and up */
