--- a/app/views/wallet.html
+++ b/app/views/wallet.html
@@ -31,8 +31,8 @@
     </thead>
     <tfoot>
       <tr>
-        <td class="text-center" colspan="4">Total:</td>
-        <td ng-bind="total"></td>
+        <td class="text-right" colspan="4">Total:</td>
+        <td class="text-right" ng-bind="total | currency"></td>
       </tr>
     </tfoot>
 
