--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,11 +23,18 @@ $base-spacing: 10px;
 
 html, body {
   height: 100%;
+  padding: 0;
 }
 
-body {
-  padding: 0;
-  position: relative;
+.page {
+  min-height: 100%;
+  margin-bottom: -$footer-height;
+
+  &:after {
+    content: '';
+    display: block;
+    height: $footer-height;
+  }
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -57,8 +64,6 @@ body {
 
 /* Custom page footer */
 .footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
   height: $footer-height;
   background-color: #f5f5f5;
