[+] added easter-egg

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -77,6 +77,14 @@ html, body {
   margin: 30px 0;
 }
 
+.easter-egg {
+
+  img {
+    width: 100%;
+  }
+
+}
+
 /* Main marketing message and sign up button */
 .jumbotron {
   text-align: center;
